# Saiki

./: CHANGELOG.md  LICENSE  README.md  anki_common.py  audio_extractor.py  batch_anki_import.sh  pyproject.toml  requirements-tts.txt  requirements.txt  saiki.py  word_scraper.py  yt-transcript.py
examples/: config.yaml
saiki/: audio.py  cli.py  importer.py  text.py  words.py
src/saiki/: __init__.py  ankiconnect.py  audio.py  cli.py  config.py  importer.py  text.py  words.py  youtube.py
tests/: test_core.py
